--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@ El objetivo de esta empresa es garantizar soluciones estables y
 de alto desempeño cumpliendo las espectativas de nuestros clientes. 
 Ademas ofrecemos soluciones innovadoras y adaptables a las necesidades 
 de nuestros clientes.
+<embed src="logotipo.png" with="500" border="3"> </embed>
 </font>
 </body>
 </html>
