--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 El objetivo de esta empresa es garantizar soluciones estables y 
 de alto desempeño cumpliendo las espectativas de nuestros clientes. 
 Ademas ofrecemos soluciones innovadoras y adaptables a las necesidades 
-de nuestros clientes.
-<img src="logotipo.png" with="500" border="3">
+de nuestros clientes. <br>
+<center>
+<img src="logotipo.png" width="500" border="3">
+</center>
 </font>
 </body>
 </html>
